--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/Griflongtin/javascript-week-one#readme",
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "browserfy": "^1.0.0",
+    "browserify": "^15.0.0",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
