--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "browserfy": "^1.0.0",
     "browserify": "^15.0.0",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "vinyl-source-stream": "^2.0.0"
