--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Griflongtin/javascript-week-one#readme",
   "devDependencies": {
+    "bower-files": "^4.0.0",
     "browserfy": "^1.0.0",
     "browserify": "^15.0.0",
     "del": "^3.0.0",
@@ -24,6 +25,8 @@
     "gulp-concat": "^2.6.1",
     "gulp-jshint": "^2.1.0",
     "jshint": "^2.9.5",
+    "serve": "^6.4.3",
     "vinyl-source-stream": "^2.0.0"
-  }
+  },
+  "dependencies": {}
 }
