--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Griflongtin/javascript-week-one#readme",
   "devDependencies": {
     "bower-files": "^4.0.0",
+    "browser-sync": "^2.23.3",
     "browserfy": "^1.0.0",
     "browserify": "^15.0.0",
     "del": "^3.0.0",
