--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/Griflongtin/javascript-week-one#readme",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^8.0.0",
     "bower-files": "^4.0.0",
     "browser-sync": "^2.23.3",
     "browserfy": "^1.0.0",
