--- a/bower.json
+++ b/bower.json
@@ -17,5 +17,8 @@
   "dependencies": {
     "jquery": "^3.2.1",
     "moment": "^2.20.1"
+  },
+  "devDependencies": {
+    "jasmine-expect": "^3.8.1"
   }
 }
