--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Griflongtin/javascript-week-one#readme",
   "devDependencies": {
+    "@types/jasmine-matchers": "^0.2.30",
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^8.0.0",
@@ -30,6 +31,7 @@
     "gulp-jshint": "^2.1.0",
     "jasmine": "^2.8.0",
     "jasmine-core": "^2.8.0",
+    "jasmine-expect": "^3.8.1",
     "jshint": "^2.9.5",
     "karma": "^2.0.0",
     "karma-browserify": "^5.1.3",
@@ -37,6 +39,7 @@
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine-matchers": "^3.7.0",
     "karma-jquery": "^0.2.2",
     "serve": "^6.4.3",
     "vinyl-source-stream": "^2.0.0",
